mini projeto de FlexBox

--- a/index.html
+++ b/index.html
@@ -4,16 +4,63 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>FlexBox</title>
+    <title>Flex Project</title>
 </head>
 <body>
-    <div class="container">
-        <div class="item">1</div>
-        <div class="item">2</div>
-        <div class="item">3</div>
-        <div class="item">4</div>
-        <div class="item">5</div>
-        <div class="item">6</div>
-    </div>
+    <main>
+        <section>
+            <h2>Júnior</h2>
+            <ul>
+                <li>HTML</li>
+                <li>CSS</li>
+            </ul>
+            <div class="salary">
+                <h3>Salário</h3>
+                <p>R$ 4.500,00</p>
+            </div>
+        </section>
+
+
+        <section>
+            <h2>Pleno</h2>
+            <ul>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>JavaScript</li>
+                <li>React</li>
+                <li>Note</li>
+            </ul>
+            <div class="salary">
+                <h3>Salário</h3>
+                <p>R$ 12.000,00</p>
+            </div>
+        </section>
+
+
+        <section>
+            <h2>Senior</h2>
+            <ul>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>HTML</li>
+                <li>JavaScript</li>
+                <li>React</li>
+                <li>Note</li>
+                <li>Next</li>
+                <li>Nest</li>
+                <li>AWS</li>
+            </ul>
+            <div class="salary">
+                <h3>Salário</h3>
+                <p>R$ 20.500,00</p>
+            </div>
+        </section>
+
+
+
+
+
+
+    </main>
 </body>
 </html>
